# Raw-processor

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
include/rawproc/: GpuContext.h  IProcessingPlugin.h  ImageExporter.h  ImageTypes.h  PluginManager.h  ProcessingPipeline.h  RawLoader.h  ThreadPool.h  Tiling.h  UnifiedRawData.h
include/rawproc/PAL/: DynamicLibrary.h
plugins/denoise/: DenoisePlugin.cpp
plugins/gamma/: GammaPlugin.cpp
plugins/whitebalance/: WhiteBalancePlugin.cpp
src/: GpuContext.cpp  GpuContextWgpu.cpp  ImageExporter.cpp  PluginManager.cpp  ProcessingPipeline.cpp  RawLoader.cpp  RawLoaderLibRaw.cpp  ThreadPool.cpp  UnifiedRawData.cpp
src/PAL/: DynamicLibrary.cpp
